[package]
name = "asound_conf_wizard"
description = "Generate a /etc/asound.conf based on user choices"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jason Gray"]
rust-version = "1.64"

[[bin]]
name = "awiz"
path = "src/main.rs"
doc = false

[dependencies]
which = "4.3.0"
glob = "0.3.0"
alsa = "0.6"
comfy-table = "6.1"
colored = "2"

[profile.default]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true

[package.metadata.deb]
name = "asound-conf-wizard"
maintainer = "Jason Gray <jasonlevigray3@gmail.com>"
copyright = "2022 Jason Gray <jasonlevigray3@gmail.com>"
license-file = ["LICENSE", "0"]
depends = "libc6 (>= 2.31), libasound2 (>= 1.2.4)"
priority = "optional"
section = "base"
extended-description = """\
An interactive utility that generates a very simple /etc/asound.conf."""
