[package]
name = "asound-conf-wizard"
description = "asound-conf-wizard"
homepage = "https://github.com/JasonLG1979/asound-conf-wizard"
repository = "https://github.com/JasonLG1979/asound-conf-wizard"
version = "0.1.7"
edition = "2021"
license = "MIT"
authors = ["Jason Gray"]
rust-version = "1.64"
readme = "README.md"

[[bin]]
name = "awiz"
path = "src/main.rs"
doc = false

[dependencies]
itertools = "0.10"
which = "4"
glob = "0.3"
alsa = "0.6"
comfy-table = "6"
colored = "2"

[profile.default]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true

[package.metadata.deb]
name = "asound-conf-wizard"
maintainer = "Jason Gray <jasonlevigray3@gmail.com>"
copyright = "2022 Jason Gray <jasonlevigray3@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
An interactive utility that generates a very simple /etc/asound.conf. \
It is designed to be used on headless sytems that run bare ALSA. \
It will NOT run on systems that have PulseAudio, Jack Audio or PipeWire installed. That is by design. \
You should use those to configure audio if they are installed."""
depends = "libc6 (>= 2.31), libasound2 (>= 1.2.4)"
priority = "optional"
section = "base"
